<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="213dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgProRecycler"
                android:layout_width="154dp"
                android:layout_height="214dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/computadora" />

            <TextView
                android:id="@+id/nombrePro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgProRecycler"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginEnd="31dp"
                android:layout_marginRight="31dp"
                android:layout_marginBottom="15dp"
                android:text="@string/modeloPro"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintEnd_toStartOf="@+id/modeloPro"
                app:layout_constraintStart_toEndOf="@+id/imgProRecycler" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="15dp"
                android:text="@string/stockPro"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                app:layout_constraintEnd_toStartOf="@+id/stockPro"
                app:layout_constraintStart_toEndOf="@+id/imgProRecycler" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginEnd="39dp"
                android:layout_marginRight="39dp"
                android:layout_marginBottom="20dp"
                android:text="@string/precioPro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/precioPro"
                app:layout_constraintStart_toEndOf="@+id/imgProRecycler" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginEnd="39dp"
                android:layout_marginRight="39dp"
                android:layout_marginBottom="15dp"
                android:text="@string/marcaPro"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toStartOf="@+id/marcaPro"
                app:layout_constraintStart_toEndOf="@+id/imgProRecycler" />

            <TextView
                android:id="@+id/marcaPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="106dp"
                android:layout_marginRight="106dp"
                android:layout_marginBottom="15dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/modeloPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView11" />

            <TextView
                android:id="@+id/modeloPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="106dp"
                android:layout_marginRight="106dp"
                android:layout_marginBottom="15dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/stockPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8" />

            <TextView
                android:id="@+id/stockPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="109dp"
                android:layout_marginRight="109dp"
                android:layout_marginBottom="15dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/precioPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9" />

            <TextView
                android:id="@+id/precioPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="106dp"
                android:layout_marginRight="106dp"
                android:layout_marginBottom="20dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>